ReviewForce/force-app/main/default/objects/Place__c/fields/AYCE__c.field-meta.xml
<CustomField>
    <fullName>AYCE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All You Can Eat</inlineHelpText>
    <label>AYCE?</label>
    <type>Checkbox</type>
</CustomField>