ReviewForce/force-app/main/default/objects/Place__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of a place</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>