ReviewForce/force-app/main/default/objects/Place__c/fields/Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Review_Notes__c</fullName>
    <label>Review Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>