ReviewForce/force-app/main/default/objects/Place__c/fields/Service_Quality__c.field-meta.xml
<CustomField>
    <fullName>Service_Quality__c</fullName>
    <label>Service Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_of_10</valueSetName>
    </valueSet>
</CustomField>