ReviewForce/force-app/main/default/objects/Place__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Street Name, Number, &amp; Road Type</description>
    <label>Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>