ReviewForce/force-app/main/default/objects/Place__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Place to review</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant</fullName>
                <default>true</default>
                <label>Restaurant</label>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Theater</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>