ReviewForce/force-app/main/default/objects/Place__c/fields/Value_For_Money__c.field-meta.xml
<CustomField>
    <fullName>Value_For_Money__c</fullName>
    <label>Value For Money</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_of_5</valueSetName>
    </valueSet>
</CustomField>