ReviewForce/force-app/main/default/objects/Place__c/fields/Yelp_Review_Link__c.field-meta.xml
<CustomField>
    <fullName>Yelp_Review_Link__c</fullName>
    <label>Yelp Review Link</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>