ReviewForce/force-app/main/default/objects/Place__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Zip Code</description>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>